qc pass: p4lang: pckoudp over qinq
qc pass: p4lang: multicast qinq routing
qc pass: p4lang: multicast bundle qinq routing
qc pass: p4lang: mldp qinq core
qc pass: p4lang: mldp bundle qinq core
qc pass: p4lang: mldp qinq egress edge
qc pass: p4lang: mldp qinq ingress edge
qc pass: p4lang: bier qinq core
qc pass: p4lang: bier bundle qinq core
qc pass: p4lang: qinq nsh
qc pass: p4lang: qinq polka
qc pass: p4lang: l2vpn over bundle qinq mpls
qc pass: p4lang: l3vpn over bundle qinq mpls
qc pass: p4lang: qinq local connect
qc pass: p4lang: qinq pmtud
qc pass: p4lang: qinq tcpmss
qc pass: p4lang: qinq bridge tcpmss
---------------------------------- 2024-08-07 19:53:43 24.8.7
qc pass: interop1: qinq encapsulation
qc pass: interop2: qinq encapsulation
qc pass: interop2: dot1q in dot1ad encapsulation
qc pass: interop9: qinq encapsulation
---------------------------------- 2024-08-10 05:11:59 24.8.10
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-08-10 06:00:56 24.8.10
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-08-20 07:59:06 24.8.20
no qc pass: p4lang downlink
no qc pass: p4lang demultiplexer
failed: p4lang demultiplexer
failed: p4lang downlink
---------------------------------- 2024-08-21 05:46:34 24.8.21
no failed: p4lang downlink
no failed: p4lang demultiplexer
qc pass: p4lang demultiplexer
qc pass: p4lang downlink
---------------------------------- 2024-08-23 08:49:03 24.8.23
no qc pass: p4lang downlink
failed: p4lang downlink
---------------------------------- 2024-08-23 09:17:04 24.8.23
no failed: p4lang downlink
qc pass: p4lang downlink
---------------------------------- 2024-08-24 07:41:45 24.8.24
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-08-24 08:11:51 24.8.24
no failed: dhcp with excluded address
qc pass: dhcp with excluded address