@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.9.25-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-09-25 07:42:16, took 00:23:38, with 60 workers, on 3532 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2024-09-25 07:58:07, took 00:13:10, with 60 workers, on 3534 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -741,6 +741,7 @@ http://sources.freertr.org/cfg/crypt-macsec52.tst;crypt-macsec52.tst;success;mac
 http://sources.freertr.org/cfg/crypt-macsec53.tst;crypt-macsec53.tst;success;macsec with aes256gcm and aead
 http://sources.freertr.org/cfg/crypt-macsec54.tst;crypt-macsec54.tst;success;macsec over tmux
 http://sources.freertr.org/cfg/crypt-macsec55.tst;crypt-macsec55.tst;success;macsec over l2tp3
+http://sources.freertr.org/cfg/crypt-macsec56.tst;crypt-macsec56.tst;success;macsec with static key
 http://sources.freertr.org/cfg/crypt-nat01.tst;crypt-nat01.tst;success;source list translation to interface
 http://sources.freertr.org/cfg/crypt-nat02.tst;crypt-nat02.tst;success;source list translation to address
 http://sources.freertr.org/cfg/crypt-nat03.tst;crypt-nat03.tst;success;source list translation to pool
@@ -1678,6 +1679,7 @@ http://sources.freertr.org/cfg/p4lang-crypt129.tst;p4lang-crypt129.tst;success;p
 http://sources.freertr.org/cfg/p4lang-crypt130.tst;p4lang-crypt130.tst;success;p4lang: sgt qinq egress access list
 http://sources.freertr.org/cfg/p4lang-crypt131.tst;p4lang-crypt131.tst;success;p4lang: packout on qinq port
 http://sources.freertr.org/cfg/p4lang-crypt132.tst;p4lang-crypt132.tst;success;p4lang: packout on macsec qinq port
+http://sources.freertr.org/cfg/p4lang-crypt133.tst;p4lang-crypt133.tst;success;p4lang: macsec with static key
 http://sources.freertr.org/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.freertr.org/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.freertr.org/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
