@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.9.25-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-09-25 07:42:16, took 00:23:38, with 60 workers, on 3532 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2024-09-25 07:58:07, took 00:13:10, with 60 workers, on 3534 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -753,6 +753,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-macsec53.tst">crypt-macsec53.tst</a></td><td>success</td><td>macsec with aes256gcm and aead</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-macsec54.tst">crypt-macsec54.tst</a></td><td>success</td><td>macsec over tmux</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-macsec55.tst">crypt-macsec55.tst</a></td><td>success</td><td>macsec over l2tp3</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-macsec56.tst">crypt-macsec56.tst</a></td><td>success</td><td>macsec with static key</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat01.tst">crypt-nat01.tst</a></td><td>success</td><td>source list translation to interface</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat02.tst">crypt-nat02.tst</a></td><td>success</td><td>source list translation to address</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat03.tst">crypt-nat03.tst</a></td><td>success</td><td>source list translation to pool</td></tr>
@@ -1690,6 +1691,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt130.tst">p4lang-crypt130.tst</a></td><td>success</td><td>p4lang: sgt qinq egress access list</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt131.tst">p4lang-crypt131.tst</a></td><td>success</td><td>p4lang: packout on qinq port</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt132.tst">p4lang-crypt132.tst</a></td><td>success</td><td>p4lang: packout on macsec qinq port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt133.tst">p4lang-crypt133.tst</a></td><td>success</td><td>p4lang: macsec with static key</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
