@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.9.25-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-09-25 06:51:46, took 00:08:08, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-09-25 08:10:11, took 00:11:42, with 60 workers, on 632 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -264,6 +264,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt130.tst">p4lang-crypt130.tst</a></td><td>success</td><td>p4lang: sgt qinq egress access list</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt131.tst">p4lang-crypt131.tst</a></td><td>success</td><td>p4lang: packout on qinq port</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt132.tst">p4lang-crypt132.tst</a></td><td>success</td><td>p4lang: packout on macsec qinq port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt133.tst">p4lang-crypt133.tst</a></td><td>success</td><td>p4lang: macsec with static key</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
