@@ -15958,3 +15958,6 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-08-24 08:11:51 24.8.24
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-09-25 07:44:56 24.9.25
+qc pass: macsec with static key
+qc pass: p4lang: macsec with static key
